# tket

./: CONTRIBUTING.md  build-without-conan.md
.github/workflows/: build-without-conan.yml  build_and_test.yml  build_libs.yml  build_pytket_docs.yml  coverage.yml  docs.yml  pytket_benchmarking.yml  release.yml  test_libs.yml
libs/tkassert/test/: conanfile.py
libs/tklog/test/: conanfile.py
libs/tkrng/test/: conanfile.py
libs/tktokenswap/test/: conanfile.py
libs/tkwsm/test/: conanfile.py
pytket/binders/: circuit_library.cpp
pytket/binders/circuit/: main.cpp
pytket/binders/circuit/Circuit/: add_op.cpp  main.cpp
pytket/docs/: README.md  changelog.md  extensions.md  faqs.md  getting_started.md  justfile  passes.md  pyproject.toml
pytket/pytket/_tket/: circuit.pyi
pytket/pytket/circuit/: __init__.py
pytket/pytket/passes/: combinecondpass.py
pytket/tests/: circuit_test.py  classical_test.py  distribution_test.py  transform_test.py  zx_diagram_test.py
tket/: conanfile.py
tket/include/tket/Circuit/: CircPool.hpp
tket/include/tket/OpType/: OpType.hpp
tket/src/Circuit/: CircPool.cpp  CircUtils.cpp
tket/src/Gate/: Gate.cpp  GateUnitaryMatrix.cpp  GateUnitaryMatrixComposites.cpp
tket/src/OpType/: OpTypeFunctions.cpp  OpTypeInfo.cpp
tket/src/PauliGraph/: PauliGraph.cpp
tket/src/Predicates/: PassGenerators.cpp
tket/src/Transformations/: CliffordReductionPass.cpp  GreedyPauliConverters.cpp  GreedyPauliOptimisation.cpp
tket/src/Utils/: MatrixAnalysis.cpp
tket/test/: CMakeLists.txt
tket/test/src/: test_CompilerPass.cpp  test_GreedyPauli.cpp
(+3 files in other folders)
