[project]
name = "pytket-api-docs"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
  "sphinx~=8.0.0",
  "sphinx-copybutton>=0.5.2,<0.6.0",
  "ipykernel>=6.29.4,<7.0.0",
  "enum-tools[sphinx]>=0.12.0",
  "myst-nb",
  "sphinxcontrib-googleanalytics>=0.4,<0.5",
  "quantinuum-sphinx>=0.6.0",
]
